# rust

./: hello  hello.rs
hello-project/: Cargo.toml
hello-project/src/: main.rs
hello-rocket/: Cargo.toml
hello-rocket/src/: main.rs
mars_calc/: Cargo.toml
mars_calc/src/: main.rs
